sass: fix scrollbar appearing

--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -3,6 +3,10 @@
 @import 'content';
 @import 'transport';
 
+* {
+  box-sizing: border-box;
+}
+
 body {
   display: flex;
   flex-direction: column;
